@@ -1,3 +1,9 @@
+2010-10-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-default-soapenc-types): new function
+	(soap-parse-wsdl): add the default types from the soapenc
+	namespace to the wsdl document.  Fixes bug #3
+
 2010-10-12  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-extract-xmlns): if the node has a
